syntax = "proto3";

package pkg.apis.idmgr;

service Management {
  rpc CreateIdentityVolume(CreateIdentityVolumeRequest)
      returns (CreateIdentityVolumeResponse) {
  }

  rpc DestroyIdentityVolume(DestroyIdentityVolumeRequest)
      returns (DestroyIdentityVolumeResponse) {
  }
}

message CreateIdentityVolumeRequest {
  string mount_path = 1;
  PodInfo pod_info = 2;
}

message CreateIdentityVolumeResponse {
}

message DestroyIdentityVolumeRequest {
  string mount_path = 1;
}

message DestroyIdentityVolumeResponse {
}

message PodInfo {
  string name = 1;
  string namespace = 2;
  string uid = 3;
  string service_account = 4;
}

message ManagerCheckpoint {
  string mount_path = 1;
  PodInfo pod_info = 2;
}
