syntax = "proto3";

package pkg.apis.workload;

service Workload {
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {
  }

  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {
  }
}

message GetTokenRequest {
  repeated string audience = 1;
}

message GetTokenResponse {
  bytes token = 1;
  int64 expiration = 2;
}

message ValidateTokenRequest {
  bytes token = 1;
  repeated string audience = 2;
}

message ValidateTokenResponse {
  bool valid = 1;
}
